--- a/privacy.html
+++ b/privacy.html
@@ -224,7 +224,7 @@
             <div class="section">
                 <h2>Contact Us</h2>
                 <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-                <p><a href="mailto:aperturaprocam@gmail.com">aperturaprocam@gmail.com</a></p>
+                <p><a href="mailto:aperturaprocam@gmail.com">ddavis765@@gmail.com</a></p>
             </div>
         </div>
         
