--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="contact-section">
                 <h2>Need More Help?</h2>
                 <p>We're here to help! Send us an email and we'll get back to you as soon as possible.</p>
-                <a href="mailto:aperturaprocam@gmail.com" class="contact-button">Contact Support</a>
+                <a href="mailto:ddavis765@gmail.com" class="contact-button">Contact Support</a>
             </div>
             
             <div class="links">
