--- a/terms.html
+++ b/terms.html
@@ -261,7 +261,7 @@
             <div class="section">
                 <h2>14. Contact Information</h2>
                 <p>For questions about these Terms of Use, please contact us at:</p>
-                <p><a href="mailto:aperturaprocam@gmail.com">aperturaprocam@gmail.com</a></p>
+                <p><a href="mailto:ddavis765@gmail.com">ddavis765@gmail.com</a></p>
             </div>
         </div>
         
